--- a/administrator/languages/en-GB/com_blogger.ini
+++ b/administrator/languages/en-GB/com_blogger.ini
@@ -125,5 +125,14 @@ COM_BLOGGER_TITLE_FORM_VIEW_ITEM = "ItemForm"
 COM_BLOGGER_TITLE_FORM_VIEW_ITEM_DESC = "Show a form to add or edit a Item"
 
 
-
-
+COM_BLOGGER_TITLE_AUTHORS="Authors"
+COM_BLOGGER_FORM_LBL_AUTHOR_CREATED_BY="Created by"
+COM_BLOGGER_FORM_DESC_AUTHOR_CREATED_BY=""
+COM_BLOGGER_FORM_LBL_AUTHOR_MODIFIED_BY="Modified by"
+COM_BLOGGER_FORM_DESC_AUTHOR_MODIFIED_BY=""
+COM_BLOGGER_FORM_LBL_AUTHOR_USERID="Userid"
+COM_BLOGGER_FORM_DESC_AUTHOR_USERID=""
+COM_BLOGGER_FORM_LBL_AUTHOR_NAME="Name"
+COM_BLOGGER_FORM_DESC_AUTHOR_NAME=""
+COM_BLOGGER_FORM_LBL_AUTHOR_IMG="Image"
+COM_BLOGGER_FORM_DESC_AUTHOR_IMG=""
