--- a/site/languages/en-GB/com_blogger.ini
+++ b/site/languages/en-GB/com_blogger.ini
@@ -17,16 +17,15 @@ COM_BLOGGER_SEARCH_TOOLS_DESC = ""
 COM_BLOGGER_SEARCH_FILTER_SUBMIT = "Search"
 COM_BLOGGER_SEARCH_FILTER_CLEAR = "Clear"
 COM_BLOGGER_SEARCH_FILTER_DATE_FORMAT = "Dates should be in this format: \"YYYY-MM-DD\". Some filter fields have been ignored."
+COM_BLOGGER_READ_MORE="Read more"
+COM_BLOGGER_NO_ITEMS="No hi ha cap article o esdeveniment en aquesta categoria o data."
 
 COM_BLOGGER_ERROR_MESSAGE_NOT_AUTHORISED = "You don't have enough permissions to perform that action"
 
 COM_BLOGGER_ADD_ITEM_TITLE = "Add"
 COM_BLOGGER_EDIT_ITEM_TITLE = "Edit %s"
-COM_BLOGGER_READ_TIME="Temps de lectura %s minuts"
-COM_BLOGGER_PUBLISH_UP="Escrit el %s per <b>%s</b>"
-COM_BLOGGER_OBERT="OBERT"
-COM_BLOGGER_TANCAT="TANCAT"
-COM_BLOGGER_EVENT_LOCATION="<a href='%s' target='_blank' class='text-light'>Veure Lloc</a>"
+COM_BLOGGER_READ_TIME="Read time %s minutes"
+COM_BLOGGER_PUBLISH_UP="Writed on %s by <b>%s</b>"
 
 COM_BLOGGER_TITLE_ITEMS="Items"
 COM_BLOGGER_ITEMS_ID="ID"
